tree-sitter-duck/test/corpus/surface_forms.txt
==================
Unary applications and products
==================

let applied = f x
let delimited = f(x)
let positional = (x, y)
let named = [.x = x, .y = y]

---

(source_file
  (binding_statement
    (identifier)
    (application_expression
      (postfix_expression
        (identifier))
      (postfix_expression
        (identifier))))
  (binding_statement
    (identifier)
    (application_expression
      (postfix_expression
        (identifier))
      (parenthesized_or_product
        (parenthesized_expression
          (postfix_expression
            (identifier))))))
  (binding_statement
    (identifier)
    (postfix_expression
      (positional_product
        (postfix_expression
          (identifier))
        (postfix_expression
          (identifier)))))
  (binding_statement
    (identifier)
    (postfix_expression
      (named_product
        (product_field
          (identifier)
          (postfix_expression
            (identifier)))
        (product_field
          (identifier)
          (postfix_expression
            (identifier)))))))

==================
Arrays, imports, casts, updates, and matches
==================

let values = [x, y]
let rebuilt = [x, ...rec(index + 1, length)]
let repeated = [x; 3]
let source = import "./source.duck"
let cast = x as Text
let updated = x with { .field = y }
let [first, ...rest] = values
let result = match target {
| .ok(value) if ready => value
| _ => 0
}
type Values = [I32; 3]

---

(source_file
  (binding_statement
    (identifier)
    (postfix_expression
      (array_expression
        (postfix_expression
          (identifier))
        (postfix_expression
          (identifier)))))
  (binding_statement
    (identifier)
    (postfix_expression
      (array_expression
        (postfix_expression
          (identifier))
        (array_spread
          (recursive_call_expression
            (positional_product
              (binary_expression
                (postfix_expression
                  (identifier))
                (postfix_expression
                  (number)))
              (postfix_expression
                (identifier))))))))
  (binding_statement
    (identifier)
    (postfix_expression
      (array_repeat_expression
        (postfix_expression
          (identifier))
        (postfix_expression
          (number)))))
  (binding_statement
    (identifier)
    (postfix_expression
      (import_expression
        (string))))
  (binding_statement
    (identifier)
    (as_expression
      (postfix_expression
        (identifier))
      (as_keyword)
      (type_reference
        (type_union
          (type_intersection
            (type_difference
              (identifier)))))))
  (binding_statement
    (identifier)
    (postfix_expression
      (update_expression
        (postfix_expression
          (identifier))
        (with_keyword)
        (field_block
          (shape_field
            (identifier)
            (postfix_expression
              (identifier)))))))
  (binding_statement
    (array_pattern
      (identifier)
      (array_rest_pattern
        (identifier)))
    (postfix_expression
      (identifier)))
  (binding_statement
    (identifier)
    (match_expression
      (condition_expression
        (identifier))
      (match_case_block
        (match_case
          (union_pattern
            (identifier)
            (identifier))
          (condition_expression
            (identifier))
          (postfix_expression
            (identifier)))
        (match_case
          (wildcard)
          (postfix_expression
            (number))))))
  (type_declaration_statement
    (identifier)
    (type_reference
      (type_union
        (type_intersection
          (type_difference
            (array_type
              (type_union
                (type_intersection
                  (type_difference
                    (identifier))))
              (postfix_expression
                (number)))))))))

==================
Const recursive fold with unary condition call
==================

const fold = rec (values, index) => {
  if index == @len(values) {
    index
  } else {
    rec(values, index + 1)
  }
}

---

(source_file
  (binding_statement
    (identifier)
    (recursive_function
      (parameter_list
        (parameter
          (identifier))
        (parameter
          (identifier)))
      (postfix_expression
        (block
          (expression_statement
            (if_expression
              (condition_expression
                (condition_binary_expression
                  (condition_expression
                    (identifier))
                  (condition_expression
                    (condition_call_expression
                      (condition_expression
                        (intrinsic_identifier))
                      (parenthesized_or_product
                        (parenthesized_expression
                          (postfix_expression
                            (identifier))))))))
              (block
                (expression_statement
                  (postfix_expression
                    (identifier))))
              (block
                (expression_statement
                  (recursive_call_expression
                    (positional_product
                      (postfix_expression
                        (identifier))
                      (binary_expression
                        (postfix_expression
                          (identifier))
                        (postfix_expression
                          (number))))))))))))))
